<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="total_spent">Total Spent</string>
    <string name="budgeted_to_date">Budgeted To Date</string>
    <string name="total_budget">Total Budget</string>

    <string name="empty"></string>
    <string name="app_name">Plan\'it Prom</string>
    <string name="title_activity_splash">Splash</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_intro">Intro</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="setUpWithFacebook">Set Up With Facebook"</string>
    <string name="selectATheme">Select a Theme</string>
    <string name="title_activity_setup">Setup</string>
    <string name="name">Name</string>
    <string name="budget">Your Budget</string>
    <string name="promDate">Prom Date</string>
    <string name="gender">Gender</string>
    <string name="integration">Calendar Integration</string>
    <string name="integrationNotes">Timeline with be integrated with your personal calendar.</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_budget">Budget</string>
    <string name="daysTilProm">Days Til Prom</string>
    <string name="budget_list_tip">Uncheck items that you will not include in your budget</string>
    <string name="item">Item</string>
    <string name="item_name">Item Name</string>
    <string name="budgeted">Budgeted</string>
    <string name="actual">Actual</string>
    <string name="cost">Cost</string>
    <string name="accessories_subitem">Accessories\nSub-Item:</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="price">Price</string>
    <string name="taxRate">Tax Rate</string>
    <string name="discount">Discount/Coupon</string>
    <string name="tip">Tip</string>
    <string name="total">Total Cost</string>
    <string name="title_activity_add_subitem">Add Sub-Item</string>
    <string name="title_activity_subitem_list">Sub-Item List</string>
    <string name="title_activity_budget_detail">BudgetDetail</string>
    <string name="title_activity_budget_item_detail">BudgetItemDetail</string>
    <string name="recommended_spending">Recommended Spending</string>
    <string name="total_budget_remaining">Total Budget Remaning</string>
    <string name="merchant">Merchant</string>
    <string name="title_activity_cost_of_credit">CostOfCredit</string>
    <string name="item_cost">Item Cost</string>
    <string name="credit_apr">Credit APR</string>
    <string name="three_month_total">3 Mo. Total</string>
    <string name="six_month_total">6 Mo. Total</string>
    <string name="twelve_month_total">12 Mo. Total"</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_photo_gallery_item">PhotoGalleryItem</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="title_activity_picture_gallery">Photo Gallery</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="enter_budget_hint">Enter Total Prom Spending Limit</string>
    <string name="enter_date">Select a date</string>
    <string name="gender_default_value">TBD</string>
    <string name="pref_file_name">budget_app_saved_pref_file</string>
    <string name="budget_remaining_template" formatted="false">$%.2f spent of $%d budget</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_time_line">TimeLine</string>
    <string name="calculator_cost_of_credit_text">Some stores allow you to purchase items on credit.  Tap here to see the true costs of buying on credit.</string>
    <string name="calculator_price_hint">Enter tag price</string>
    <string name="calculator_tax_hint">Enter sales tax %</string>
    <string name="calculator_discount_hint">Enter discount</string>
    <string name="calculator_tip_hint">Enter any tip $</string>
    <string name="cost_of_credit_intrest_warning">If you do not pay off your credit balance every month, you will need to pay interest on your purchases.  Below is the total cost of your purchase if you wait 3 months, 6 months, or 12 months to pay it off in full.</string>
    <string name="cost_of_credit_header">Buying on credit</string>
    <string name="cost_of_credit_data_missing">Please make sure that the Item Cost and Credit APR fields have been entered.</string>
    <string name="title_activity_tips_details">TipsDetails</string>
    <string name="facebook_login_title">Fackbook Login</string>
    <string name="three_months_away">Three Months Away</string>
    <string name="two_months_away">Two Months Away</string>
    <string name="one_months_away">One Month Away</string>
    <string name="three_weeks_away">Three Weeks Away</string>
    <string name="two_weeks_away">Two Weeks Away</string>
    <string name="one_week_away">One Week Away</string>
    <string name="day_before_event">Day before Prom</string>
    <string name="day_of_event">Day of Prom</string>
    <string name="now_time_line">Now</string>
    <string name="three_months_away_calendar">Three Months Until Prom</string>
    <string name="two_months_away_calendar">Two Months Until Prom</string>
    <string name="one_months_away_calendar">One Month Until Prom</string>
    <string name="three_weeks_away_calendar">Three Weeks Until Prom</string>
    <string name="two_weeks_away_calendar">Two Weeks Until Prom</string>
    <string name="one_week_away_calendar">One Week Until Prom</string>
    <string name="day_before_event_calendar">Day before Prom</string>
    <string name="day_of_event_calendar">Day of Prom</string>
    <string name="now_calendar">Prom To-Do ASAP</string>
    <string name="percent">%</string>
    <string name="dollar">$</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="budget_health_meter">Budget Health Meter</string>
    <string name="facebook_app_id">352390758210293</string>
    <string name="title_activity_share_dialog">ShareDialog</string>
	<string name="share">Share</string>
	<string name="share_default_message">Look at this item I found for my prom!</string>
	<string name="pick_date_title">Select Date</string>
	<string name="privacy">Privacy Policy</string>
	<string name="flurry_api_key">MHMHBZM6Y5MDW85FG5XV</string>
	<string name="warning">Warning</string>
	<string name="confirm_changes">Do you want to save your changes or discard them?</string>
	<string name="discard">Discard</string>
	<string name="save">Save</string>
	<string name="ok">OK</string>
	<string name="facebook_post_error">Unable to post to Facebook at this time.</string>
	<string name="facebook_post_message">Posting message to Facebook. Please wait.</string>
	<string name="facebook_login_error">Unable to log into Facebook at this time.</string>
	<string name="no_amount_entered_budget">0</string>
	<string name="money_symbol">$</string>
</resources>