<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator" >

    <RelativeLayout
        android:id="@+id/calcHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/calcHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/calcHeaderButton"
            android:text="@string/title_activity_calculator"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/calcHeaderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="doHome"
            android:src="@drawable/icon_home" 
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent">
            
        </ImageButton>"

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/calcgroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/costOfCreditText"
        android:layout_below="@id/calcHeader"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/priceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/priceEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:hint="@string/calculator_price_hint"
                android:inputType="numberDecimal"
                android:maxLength="4" >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/taxRateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/taxRate"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/taxRateEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:hint="@string/calculator_tax_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/discountText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:gravity="center"
                android:text="@string/discount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/discountEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:ems="10"
                android:hint="@string/calculator_discount_hint"
                android:inputType="number|numberDecimal"
                android:maxLength="3" />

            <Button
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:onClick="doDiscountType"
                android:text="@string/percent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/tipText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/tip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/tipEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:hint="@string/calculator_tip_hint"
                android:inputType="number|numberDecimal"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" 
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/empty" />

            <ImageButton
                android:id="@+id/calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" 
                android:layout_weight="60"
                android:onClick="doCalculate"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/totalCostText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/totalEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

	</LinearLayout>

    <TextView
        android:id="@+id/costOfCreditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/costOfCreditGroup"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/calculator_cost_of_credit_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/costOfCreditGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" 
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/empty" />

        <ImageButton
            android:id="@+id/costOfCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:background="@android:color/transparent"
            android:onClick="doCostOfCredit"
            android:src="@drawable/button_buyingoncredit" />

    </LinearLayout>
    
</RelativeLayout>